--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -25,23 +25,23 @@ jobs:
       - name: Run Tests
         run: pytest tests/
 
-#  build-and-push-docker:
-#    runs-on: ubuntu-latest
-#    needs: test
-#    steps:
-#      - name: Checkout Code
-#        uses: actions/checkout@v3
-#
-#      - name: Log in to DockerHub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#
-#      - name: Build Docker Image
-#        run: |
-#          docker build -t ${{ secrets.DOCKER_USERNAME }}/dijkstra-algorithm:latest .
-#
-#      - name: Push Docker Image
-#        run: |
-#          docker push ${{ secrets.DOCKER_USERNAME }}/dijkstra-algorithm:latest
+  build-and-push-docker:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/dijkstra-algorithm:latest .
+
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/dijkstra-algorithm:latest
